Update in Hero section
reverse back to original text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="col-12">
                 <img src="img/logo.png" alt="" class="hero-logo">
                 <h1>WORKING WITH design LAB</h1>
-                <p>From testing branch</p>
+                <p>We’ve been helping startups launch and grow their businesses. We help you to fill the gap between development, design and product management.</p>
             </div>
        </div>
        <div class="container hero-img-button">
