--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>Sample 2 of HTML and CSS</title>
+    
+    <!--[if lt IE 9]>
+        <script src="dist/html5shiv.js"></script>
+    <![endif]-->
 
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="vendor/myStyle.css">    
