--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!--[if lt IE 9]>
         <script src="dist/html5shiv.js"></script>
     <![endif]-->
+    <!--[if lte IE 8]><script src="js/libs/selectivizr.js"></script><![endif]-->
 
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="vendor/myStyle.css">    
